--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,7 @@ dependencies {
     implementation "androidx.compose.ui:ui:1.3.1"
     implementation "androidx.compose.ui:ui-tooling-preview:1.3.1"
     implementation 'androidx.compose.material3:material3:1.1.0-alpha02'
+    implementation "com.google.accompanist:accompanist-swiperefresh:0.23.0"
 
     // Hilt
     implementation "com.google.dagger:hilt-android:2.44"
