--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,11 @@ plugins {
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 
+Properties properties = new Properties()
+if (project.rootProject.file('local.properties').canRead()) {
+    properties.load(project.rootProject.file("local.properties").newDataInputStream())
+}
+
 android {
     namespace 'com.jeffrwatts.celestialnavigation'
     compileSdk 33
@@ -21,6 +26,7 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
+        buildConfigField 'String', 'SERVER_URL', properties.getProperty('SERVER_URL', '"https://example.com/"')
     }
 
     buildTypes {
@@ -74,6 +80,11 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:1.3.1"
     implementation 'androidx.compose.material3:material3:1.1.0-alpha02'
     implementation "com.google.accompanist:accompanist-swiperefresh:0.23.0"
+
+    // retrofit for networking
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
 
     // Hilt
     implementation "com.google.dagger:hilt-android:2.44"
