--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:name=".CelNavApplication"
@@ -13,6 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CelestialNavigation"
         >
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
