--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,7 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:1.3.1"
     implementation 'androidx.compose.material3:material3:1.1.0-alpha02'
     implementation "com.google.accompanist:accompanist-swiperefresh:0.23.0"
+    implementation "com.google.accompanist:accompanist-permissions:0.28.0"
 
     // retrofit for networking
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
