--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,8 +79,9 @@ dependencies {
     implementation "androidx.compose.ui:ui:1.3.2"
     implementation "androidx.compose.ui:ui-tooling-preview:1.3.2"
     implementation 'androidx.compose.material3:material3:1.1.0-alpha03'
-    implementation "com.google.accompanist:accompanist-swiperefresh:0.23.0"
+    implementation "com.google.accompanist:accompanist-swiperefresh:0.28.0"
     implementation "com.google.accompanist:accompanist-permissions:0.28.0"
+    implementation "androidx.compose.material:material:1.3.1"
 
     // retrofit for networking
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
