--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,7 @@ dependencies {
     implementation "com.google.accompanist:accompanist-swiperefresh:0.28.0"
     implementation "com.google.accompanist:accompanist-permissions:0.28.0"
     implementation "androidx.compose.material:material:1.3.1"
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
 
     // retrofit for networking
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
