--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,10 +106,12 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
 
     // Test
+    //testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.3.1"
-    debugImplementation "androidx.compose.ui:ui-tooling:1.3.1"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:1.3.1"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.3.2"
+    debugImplementation "androidx.compose.ui:ui-tooling:1.3.2"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:1.3.2"
 }
